--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
 <html>
 <body>
-  <embed src="cv.pdf" width="100%" />
+  <iframe
+    src="cv.pdf"
+    frameBorder="0"
+    scrolling="auto"
+    height="100%"
+    width="100%"
+></iframe>
+
 </body>
 </html>
