--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <body>
   <iframe
-    src="cv.pdf"
+    src="Shchurov Sergei - Android dev (new).pdf"
     frameBorder="0"
     scrolling="auto"
     height="100%"
